--- a/new_pages/basics.qmd
+++ b/new_pages/basics.qmd
@@ -1531,8 +1531,8 @@ janitor::round_half_up(c(2.5, 3.5))
 
 Notes:
 
--   `*quantile()`: `x` is the numeric vector to examine, and `probs =` is a numeric vector with probabilities within 0 and 1.0, e.g `c(0.5, 0.8, 0.85)`
--   `**summary()`: gives a summary on a numeric vector including mean, median, and common percentiles
+-   `*quantile()`: `x` is the numeric vector to examine, and `probs =` is a numeric vector with probabilities within 0 and 1.0, e.g `c(0.5, 0.8, 0.85)`.
+-   `**summary()`: gives a summary on a numeric vector including mean, median, and common percentiles.
 
 [***DANGER:*** If providing a vector of numbers to one of the above functions, be sure to wrap the numbers within `c()` .]{style="color: red;"}
 
@@ -1616,9 +1616,9 @@ affirmative_str_search
 
 This section explains:
 
--   The difference between errors and warnings\
--   General syntax tips for writing R code\
--   Code assists
+-   The difference between errors and warnings.\
+-   General syntax tips for writing R code.\
+-   Code assists.
 
 Common errors and warnings and troubleshooting tips can be found in the page on [Errors and help](errors.qmd).
 
@@ -1646,10 +1646,10 @@ If all else fails, copy the error message into Google along with some key terms 
 
 A few things to remember when writing commands in R, to avoid errors and warnings:
 
--   Always close parentheses - tip: count the number of opening "(" and closing parentheses ")" for each code chunk
--   Avoid spaces in column and object names. Use underscore ( \_ ) or periods ( . ) instead
--   Keep track of and remember to separate a function's arguments with commas
--   R is case-sensitive, meaning `Variable_A` is *different* from `variable_A`
+-   Always close parentheses - tip: count the number of opening "(" and closing parentheses ")" for each code chunk.
+-   Avoid spaces in column and object names. Use underscore ( \_ ) or periods ( . ) instead.
+-   Keep track of and remember to separate a function's arguments with commas.
+-   R is case-sensitive, meaning `Variable_A` is *different* from `variable_A`.
 
 <!-- ======================================================= -->
 
