--- a/new_pages/packages_suggested.qmd
+++ b/new_pages/packages_suggested.qmd
@@ -89,8 +89,7 @@ pacman::p_load(
      # plots - general
      #################
      #ggplot2,         # included in tidyverse
-     cowplot,          # combining plots  
-     # patchwork,      # combining plots (alternative)     
+     patchwork,        # combining plots
      RColorBrewer,     # color scales
      ggnewscale,       # to add additional layers of color schemes
 
