--- a/new_pages/r_projects.qmd
+++ b/new_pages/r_projects.qmd
@@ -9,12 +9,12 @@ An R project enables your work to be bundled in a portable, self-contained folde
 
 A common, efficient, and trouble-free way to use R is to combine these 3 elements. One discrete work project is hosted within one R project. Each element is described in the sections below.  
 
-1) An **R project**  
+1) An **R project**.  
      - A self-contained working environment with folders for data, scripts, outputs, etc.  
-2) The **here** package for relative filepaths  
-     - Filepaths are written relative to the root folder of the R project - see [Import and export](importing.qmd) for more information  
-3) The **rio** package for importing/exporting  
-     - `import()` and `export()` handle any file type by by its extension (e.g. .csv, .xlsx, .png)  
+2) The **here** package for relative filepaths.  
+     - Filepaths are written relative to the root folder of the R project - see [Import and export](importing.qmd) for more information.  
+3) The **rio** package for importing/exporting.  
+     - `import()` and `export()` handle any file type by by its extension (e.g. .csv, .xlsx, .png).  
      
      
 
