--- a/new_pages/basics.qmd
+++ b/new_pages/basics.qmd
@@ -103,7 +103,7 @@ Also:
 
 ### Free online resources {.unnumbered}
 
-A definitive text is the [R for Data Science](https://r4ds.had.co.nz/) book by Garrett Grolemund and Hadley Wickham.
+A definitive text is the [R for Data Science](https://r4ds.hadley.nz/) book by Garrett Grolemund and Hadley Wickham.
 
 The [R4Epis](https://r4epis.netlify.app/) project website aims to "develop standardised data cleaning, analysis and reporting tools to cover common types of outbreaks and population-based surveys that would be conducted in an MSF emergency response setting". You can find R basics training materials, templates for RMarkdown reports on outbreaks and surveys, and tutorials to help you set them up.
 
@@ -1141,7 +1141,7 @@ new_table <- linelist[2:20, c("date_onset")]
 
 Note that you can also achieve the above row/column indexing on data frames and tibbles using **dplyr** syntax (functions `filter()` for rows, and `select()` for columns). Read more about these core functions in the [Cleaning data and core functions](cleaning.qmd) page.
 
-To filter based on "row number", you can use the **dplyr** function `row_number()` with open parentheses as part of a logical filtering statement. Often you will use the `%in%` operator and a range of numbers as part of that logical statement, as shown below. To see the *first* N rows, you can also use the special **dplyr** function `head()`.
+To filter based on "row number", you can use the **dplyr** function `row_number()` with open parentheses as part of a logical filtering statement. Often you will use the `%in%` operator and a range of numbers as part of that logical statement, as shown below. To see the *first* N rows, you can also use the special **dplyr** function `head()`. Note, there is a function `head()` from **base** R, but this is overwritten by the **dplyr** function when you load **tidyverse**.
 
 ```{r, eval=F}
 # View first 100 rows
